project(websocketpp)

cmake_minimum_required(VERSION 3.16)

set(WEBSOCKETPP_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(WEBSOCKETPP_INCLUDE ${WEBSOCKETPP_ROOT}/websocketpp)
set(WEBSOCKETPP_BUILD_ROOT ${CMAKE_CURRENT_BINARY_DIR})
set(WEBSOCKETPP_BIN ${WEBSOCKETPP_BUILD_ROOT}/bin)
set(WEBSOCKETPP_LIB ${WEBSOCKETPP_BUILD_ROOT}/lib)

set(WEBSOCKETPP_MAJOR_VERSION 0)
set(WEBSOCKETPP_MINOR_VERSION 8)
set(WEBSOCKETPP_PATCH_VERSION 2)
set(WEBSOCKETPP_VERSION ${WEBSOCKETPP_MAJOR_VERSION}.${WEBSOCKETPP_MINOR_VERSION}.${WEBSOCKETPP_PATCH_VERSION})

add_library(websocketpp INTERFACE)
target_include_directories(websocketpp INTERFACE ${WEBSOCKETPP_INCLUDE})
